--- a/src/app/component/course-list/course-list.component.html
+++ b/src/app/component/course-list/course-list.component.html
@@ -120,7 +120,7 @@
         </div>
       </div>
       
-      <button class="btn btn-details" (click)="viewCourseDetails(course.id)">
+      <button class="btn btn-details" (click)="viewCourseDetails(course._id)">
         Ver detalles
       </button>
     </div>
